updating edu file>

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: master of making coffee
+  uni: school of hard knocks
+  year: 2020
   # awards:
-  # summary:
+   summary: whatevs 
